# bot_tg

./: README.md  pyproject.toml
bot_tg/: bot.py  message_text.py  request_for_ai.py
