[tool.poetry]
name = "bot-tg"
version = "0.1.0"
description = ""
authors = ["Vlasov Dmitry <vlasov.d.e@effective-group.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
